--- a/sftp-ui/home.html
+++ b/sftp-ui/home.html
@@ -15,6 +15,8 @@
             </button>
 
             <input type="password" id="group_pass" name="group_pass" placeholder="group pass" required>
+            <input type="text" id="group_name" name="group_name" placeholder="group name" required>
+            <input type="text" id="file_name" name="file_name" placeholder="file name" required>
 
             
             <button onclick="navigate('login.html')">
